cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

add_subdirectory(beamline)
add_subdirectory(brems)
add_subdirectory(dalitz_mod)
add_subdirectory(elementary)
add_subdirectory(eta_decays)
add_subdirectory(fairroot)
add_subdirectory(hades)
add_subdirectory(nucleus_fermi)
add_subdirectory(pdg_unigen)
add_subdirectory(pion_beam)
add_subdirectory(scatter_mod)
add_subdirectory(strangeness)
add_subdirectory(tools)
add_subdirectory(w_decays)


SET(PLUGIN_CLASSES "${PLUGIN_CLASSES}" PARENT_SCOPE)
SET(PLUGIN_CLASSES_NAMES "${PLUGIN_CLASSES_NAMES}" PARENT_SCOPE)
SET(PLUGIN_SOURCES_COLLECTION "${PLUGIN_SOURCES_COLLECTION}" PARENT_SCOPE)
SET(PLUGIN_HEADERS_COLLECTION "${PLUGIN_HEADERS_COLLECTION}" PARENT_SCOPE)
